Update Post “2020-12-23-blurb-2”

--- a/src/content/posts/2020-12-23-blurb-2.md
+++ b/src/content/posts/2020-12-23-blurb-2.md
@@ -6,4 +6,4 @@ date: 2020-12-22 21:14
 description: A bookshelf
 featuredImage: /assets/avery-klein-c_drtsnboqa-unsplash.jpg
 ---
-A bookshelf. How nice.
+A bookshelf. How nice. Not like you're gonna read those books, are ya?
