Update Post “2020-12-23-blurb-1”

--- a/src/content/posts/2020-12-23-blurb-1.md
+++ b/src/content/posts/2020-12-23-blurb-1.md
@@ -1,8 +1,35 @@
 ---
 template: blog-post
-title: "Blurb #1"
-slug: /blurb1
+title: The Sugar-Hyperactivity Stereotype
+slug: /sugar-hyperactivity
 date: 2020-12-22 21:13
-description: Bruh
+description: Spoon of sugar
+featuredImage: /assets/sugar.jpg
 ---
-Secret tunnelllllll, secret tunnelllllll, through the mountain, secret, secret, secret tunnelllll!!
+Ah, yes. Sugar. Your body runs on sugar! (Or rather, glucose.) You probably associate it with baked goods, candy, and at some point-hyperactivity. 
+
+There have been so many jokes over the decades about kids going bonkers due to the so-called "sugar rush," and I remember an incident in my 1st grade class where we had an activity learning how to make our own ice cream. One classmate (who ought to be noted for attention-seeking tendencies) suddenly begins shaking in her chair, and says "sugar makes me vibrate!" 
+
+But... does sugar *actually* result in such hyperactivity? What's going on here?
+
+![Tray of donuts](/assets/donuts.jpg)
+
+During my time studying nutrition at my university, I learned that on the contrary, sugar induces drowsiness! As you can imagine, my fellow students and I across the lecture hall were flabbergasted. 
+
+Here's the science, simplified:
+
+* Consuming sugar of course increases your carbohydrate intake
+* This in turn increases your blood glucose
+* Glucose in the blood stimulates the pancreas to release insulin (a hormone that enables you to metabolize the carbs & produce glucose)
+* Insulin then triggers the uptake of glucose by the body's cells
+* The brain then releases tryptophan, an amino acid that serves as a building block for serotonin
+* The brain releases serotonin, known as the calming neurotransmitter
+* Ultimately, serotonin provides us with feelings of satiety, lethargy, & drowsiness! This explains why perhaps after eating a meal of starchy pasta, you feel calm, and cool.
+
+   However, the consumption of simple sugars, such as sucrose (AKA table sugar) is more complex. Consuming simple sugars on an empty stomach results in those sugars being absorbed rapidly, triggering a sharp increase in insulin production (a hormone required for carbohydrate digestion, as noted previously.) The resulting condition is called *hypoglycemia,* which can make you feel temporarily jumpy, as opposed to calm. Consuming simple sugars on a more filled stomach renders the absorption process much slower, and thus may induce that calming effect that is associated with the more complex carbohydrates.
+
+  Some food for thought!
+
+
+
+\*
