Update Post “2020-12-23-blurb-1”

--- a/src/content/posts/2020-12-23-blurb-1.md
+++ b/src/content/posts/2020-12-23-blurb-1.md
@@ -32,4 +32,4 @@ Here's the science, simplified:
 
 
 
-\*
+\**Remember, glucose is vital to proper functioning of the body. Unless there are extenuating medical situations that preclude consumption of a specific food/food group, all foods should be enjoyed in moderation, and are not to be moralized as "good" or "bad."*
