Update Post “2020-12-23-blurb-1”

--- a/src/content/posts/2020-12-23-blurb-1.md
+++ b/src/content/posts/2020-12-23-blurb-1.md
@@ -32,9 +32,9 @@ Here's the science, simplified:
 
 \**Remember, glucose is vital to proper functioning of the body. Unless there are    extenuating medical situations that preclude consumption of a specific food/food group, all foods should be enjoyed in moderation, and are not to be moralized as "good" or "bad."*
 
-\---------------------------
+\-------------------------------------------------------------------------------------
 
-This information came straight from my professor, (and whatever textbook I was using at the time) but here are some other references on sugar & general metabolism:
+This information came straight from my professor, (and whatever textbook I was using at the time) so I apologize for precise citations, but here are some other references on sugar & general metabolism:
 
 https://sugarscience.ucsf.edu/sugar-metabolism.html#.X-Lg1RNKi3I
 
