Update Post “2020-12-23-blurb-1”

--- a/src/content/posts/2020-12-23-blurb-1.md
+++ b/src/content/posts/2020-12-23-blurb-1.md
@@ -34,7 +34,7 @@ Here's the science, simplified:
 
 \-------------------------------------------------------------------------------------
 
-This information came straight from my professor, (and whatever textbook I was using at the time) so I apologize for precise citations, but here are some other references on sugar & general metabolism:
+This information came straight from my professor, (and whatever textbook I was using at the time) so I apologize for a lack of precise citations, but here are some other references on sugar & general metabolism:
 
 https://sugarscience.ucsf.edu/sugar-metabolism.html#.X-Lg1RNKi3I
 
