Update Post “2020-12-23-blurb-2”

--- a/src/content/posts/2020-12-23-blurb-2.md
+++ b/src/content/posts/2020-12-23-blurb-2.md
@@ -1,9 +1,56 @@
 ---
 template: blog-post
-title: "Blurb #2 "
-slug: wut
+title: "Nepal: Art in the Himalayas"
+slug: /.Nepal
 date: 2020-12-22 21:14
-description: A bookshelf
-featuredImage: /assets/avery-klein-c_drtsnboqa-unsplash.jpg
+description: A summary of my study abroad in Nepal
+featuredImage: /assets/img_2169.jpg
 ---
-A bookshelf. How nice.
+I’ve spent the last month away on one of the most transformative experiences of my life; we were the “abroad” part of a study abroad, and the “field” part of a field study, looking at the artistic intersection of Buddhist & Hindu culture in Nepal. We didn’t have any formal classes or lectures, but as my professor put it:
+
+“Nepal is our textbook, and walking is our methodology” in what he called our “journey to enlightenment.” And what a journey it was!
+
+The first portion of our trip was a trek through the Himalayas up to Everest Base Camp, staying in tea houses along the way; perhaps the most physically demanding & potentially dangerous thing I’ve done. An awe-inspiring, breathtaking (in more ways than 1, let me tell ya), and life-changing experience.
+
+![A picture of me sitting upon a giant boulder with the words "Everest Base Camp 5364m," with a view of the snowy mountains surrounding Mt. Everest in the background](/assets/img_2059.jpg "(Almost) on top of the world!")
+
+My time in these mountains has been transformative; not just because I’ve been immersed in this beautiful scenery, but because I’ve been able to experience a lifestyle so different from what I know. I was no longer bound by the clock or the endless tasks that must be done. We simply traveled, one step at a time, through the rocky trails of these towering mountains, from village to village. We arrived whenever we arrived. 
+
+I am in awe of how everything their buildings are constructed of and everything within them was carried up these steep, unforgiving slopes on the backs of these people (or yaks/donkeys). The standards of living and cleanliness are far below those with which I was raised, and yet everything now is a luxury. I think there is truly something to be said about the inner transformation that inevitably occurs when you understand a sacrifice. I don’t think anyone could understand something like that perfectly, but I feel a much more profound sense of understanding than ever would have been possible from only ever living the way I had before.
+
+After our trek, we spent about 2 weeks in Kathmandu to explore its winding chaos and learn so much about Nepali culture and art. The city’s contrast to the Himalayas is enough to give someone whiplash, but I love the different senses of adventure and exploration that both environments ignited within my soul.
+
+![A view of the Boudhanath Stupa in Kathmandu, Nepal](/assets/img_2296.jpg "Boudhanath Stupa")
+
+Overall, I think my favorite parts were the conversations we had along the way and the ample time for reflection about Buddhist principles like impermanence, arriving, becoming, suffering, desire, attachment, etc. intertwined with the spirituality and faith that I and my fellow students live. I have so many thoughts & observations I can share, but I think this has been long-winded enough;)
+
+A summary:
+
+* 17,000 ft in altitude
+* ~109 km hiked
+* 15 days of trekking
+* Too many days without showering
+* You get really sick of being sick when you get altitude sickness & then food poisoning twice
+* As someone in our group said, “it’s like chubby bunny, but with ibuprofen and diamox,” and I don’t think truer words have ever been spoken; we really were just poppin’ pills and hoping for the best haha
+* I drank approx. 1 million cups of ginger lemon tea
+* I experienced the COLDEST night of my life; I’d never shivered so violently in my entire life, and we woke up to frost covering everything in our tent. You can imagine how upset I was when I discovered that the girl next to me had actually gotten too hot that night. (Guys, it pays to have a nice sleeping bag and an extra blanket.)
+
+![9 people bundled up in several layers, huddled together in their sleeping bags in an orange, dome-shaped tent](/assets/img_2499-2.jpg "Huddled in our tent at base camp")
+
+* I used the word “magical” a ridiculous amount of times in my journal entries; those mountains are unbelievably big, and even more gorgeous
+* One of the hardest parts was not being able to pet any of the dogs (out of fear of disease)
+* Buddhist monasteries are really cool, and also really cold
+* Everything smells like juniper bushes, all the time (they smoke juniper branches every morning)
+* You want to cross the street in Kathmandu? You better have the guts of Mulan’s grandma, because that’s exactly what it felt like lol
+
+  ![A photo overlooking a major Kathmandu road, as seen from a bridge above](/assets/img_2283.jpg "A major road in Kathmandu")
+* Also, it’s really important that you remember the PIN to your credit card so you can withdraw money from ATMs…
+* I will never again take my luxurious American lifestyle for granted- readily available & potable water, warm rooms/buildings, the ability to take showers, toilet paper, electricity & wifi, etc.
+* I’m convinced Narnia is in Nepal
+
+  ![A photo from a bridge, overlooking a blue river that splits to either side of the viewer, with steep tree-filled slopes on both sides](/assets/img_2132.jpg "A Himalayan River")
+* Traditional Buddhist art is amazingly intricate, in both detail and depth of symbolism; I’ve loved learning so much about Thangka paintings, Mandalas, sculptures, shrines, etc.
+
+  ![A photo of a gallery of Buddhist Thangka paintings, hanging from the wall in the traditional fashion using silk tapestries](/assets/img_2304.jpg "A Thangka Painting School")
+
+Next time, I'll bring half as many clothes, twice as many socks, and an infinite amount of chocolate
