Update Post “2020-12-23-blurb-2”

--- a/src/content/posts/2020-12-23-blurb-2.md
+++ b/src/content/posts/2020-12-23-blurb-2.md
@@ -6,7 +6,9 @@ date: 2020-12-22 21:14
 description: A summary of my study abroad in Nepal
 featuredImage: /assets/img_2169.jpg
 ---
-I’ve spent the last month away on one of the most transformative experiences of my life; we were the “abroad” part of a study abroad, and the “field” part of a field study, looking at the artistic intersection of Buddhist & Hindu culture in Nepal. We didn’t have any formal classes or lectures, but as my professor put it:
+I’ve spent the last month away on one of the most transformative experiences of my life; we were the “abroad” part of a study abroad, and the “field” part of a field study, looking at the artistic intersection of Buddhist & Hindu culture in Nepal. 
+
+We didn’t have any formal classes or lectures, but as my professor put it:
 
 “Nepal is our textbook, and walking is our methodology” in what he called our “journey to enlightenment.” And what a journey it was!
 
