Update Post “2020-12-23-blurb-2”

--- a/src/content/posts/2020-12-23-blurb-2.md
+++ b/src/content/posts/2020-12-23-blurb-2.md
@@ -35,7 +35,7 @@ A summary:
 * You get really sick of being sick when you get altitude sickness & then food poisoning twice
 * As someone in our group said, “it’s like chubby bunny, but with ibuprofen and diamox,” and I don’t think truer words have ever been spoken; we really were just poppin’ pills and hoping for the best haha
 * I drank approx. 1 million cups of ginger lemon tea
-* I experienced the COLDEST night of my life; I’d never shivered so violently in my entire life, and we woke up to frost covering everything in our tent. You can imagine how upset I was when I discovered that the girl next to me had actually gotten too hot that night. (Guys, it pays to have a nice sleeping bag and an extra blanket.)
+* I experienced the COLDEST night of my life; I’d never shivered so violently in my entire life, and we woke up to frost covering everything in our tent. You can imagine how upset I was when I discovered that the girl next to me had actually gotten *too hot* that night. (Guys, it pays to have a nice sleeping bag and an extra blanket.)
 
 ![9 people bundled up in several layers, huddled together in their sleeping bags in an orange, dome-shaped tent](/assets/img_2499-2.jpg "Huddled in our tent at base camp")
 
@@ -53,6 +53,6 @@ A summary:
   ![A photo from a bridge, overlooking a blue river that splits to either side of the viewer, with steep tree-filled slopes on both sides](/assets/img_2132.jpg "A Himalayan River")
 * Traditional Buddhist art is amazingly intricate, in both detail and depth of symbolism; I’ve loved learning so much about Thangka paintings, Mandalas, sculptures, shrines, etc.
 
-  ![A photo of a gallery of Buddhist Thangka paintings, hanging from the wall in the traditional fashion using silk tapestries](/assets/img_2304.jpg "A Thangka Painting School")
+  ![A photo of a gallery of Buddhist Thangka paintings, hanging from the wall in the traditional fashion using silk tapestries](/assets/img_2304.jpg "Thangka Painting School")
 
 Next time, I'll bring half as many clothes, twice as many socks, and an infinite amount of chocolate
